// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu closed 1`] = `
<div
  background="#fff"
  class="Menu__Container-sc-mw2r80-0 kMplfh"
  duration="500ms"
  position="right"
  width="300px"
>
  <div>
    content
  </div>
</div>
`;

exports[`Menu custom color 1`] = `
<div
  background="#000"
  class="Menu__Container-sc-mw2r80-0 kJUTTq"
  duration="500ms"
  position="right"
  width="300px"
>
  <div>
    content
  </div>
</div>
`;

exports[`Menu custom duration 1`] = `
<div
  background="#fff"
  class="Menu__Container-sc-mw2r80-0 hMKqmI"
  duration="500ms"
  position="right"
  width="300px"
>
  <div>
    content
  </div>
</div>
`;

exports[`Menu default 1`] = `
<div
  background="#fff"
  class="Menu__Container-sc-mw2r80-0 hMKqmI"
  duration="500ms"
  position="right"
  width="300px"
>
  <div>
    content
  </div>
</div>
`;

exports[`Menu position left 1`] = `
<div
  background="#fff"
  class="Menu__Container-sc-mw2r80-0 iiEUvf"
  duration="500ms"
  position="left"
  width="300px"
>
  <div>
    content
  </div>
</div>
`;

exports[`Menu position left closed 1`] = `
<div
  background="#fff"
  class="Menu__Container-sc-mw2r80-0 jOPYsy"
  duration="500ms"
  position="left"
  width="300px"
>
  <div>
    content
  </div>
</div>
`;
